[package]
name = "gidrive"
version = "0.1.0"
edition = "2021"
authors = ["Debieche Amine <debieche_amine@proton.me>"]
description = "A tool to use github as an infinite drive"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0"
git2 = "0.20.2"
walkdir = "2.5"
rayon = "1.10"
